fix: add drop_last in dataloader

--- a/training/configs/lpcv/pidnet_small_lpcv.yaml
+++ b/training/configs/lpcv/pidnet_small_lpcv.yaml
@@ -25,7 +25,7 @@ MODEL:
   NUM_OUTPUTS: 2
   PRETRAINED: pretrained_models/imagenet/PIDNet_S_ImageNet.pth
 OUTPUT_DIR: output
-PIN_MEMORY: True
+PIN_MEMORY: False
 PRINT_FREQ: 200
 TEST:
   BASE_SIZE: 512
@@ -39,6 +39,7 @@ TORCH_THREADS: 8
 TRAIN:
   BASE_SIZE: 512
   BATCH_SIZE_PER_GPU: 16
+  DROP_LAST: False
   BEGIN_EPOCH: 0
   END_EPOCH: 400
   EXTRA_EPOCH: 0
